--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Clock</title>
-    <!-- <style>
+    <style>
         body {
             display: flex;
             align-items: center;
@@ -33,7 +33,7 @@
             margin-top: 1rem;
             box-shadow: 2px 2px 10px 3px black;
         }
-    </style> -->
+    </style>
 </head>
 
 <body>
